<resources>
    <string name="app_name">Tourism Application</string>
    <string name="action_settings">Settings</string>
    <string name="Parks_List">Parks List</string>
    <string name="Beaches_List">Beaches List</string>
    <string name="Cities_List">Cities List</string>
    <string name="placeDescription">Place Name</string>
    <string name="place_Name">Place Name</string>
    <string name="location_description">Location Description</string>
    <string name="bookTicket">Book a Ticket</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email Address</string>
    <string name="card_details">Enter Card Details: 16 digits</string>
    <string name="card_detail">Card Number</string>
    <string name="totalamount">Total Amount:</string>
    <string name="cancel">Cancel Booking</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
